--- a/css/main.css
+++ b/css/main.css
@@ -5,18 +5,18 @@
 /* ------------------------ */
 
 html {
-  font-size: 1.0em;
+  font-size: 16px;
 }
 
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
-  background: #fff/*#f4f4f4*/;
+  background: #fff;
   color: #131313;
 }
 
-h1, h2, h3, p, section {
+h1, h2, h3, h4, h5, h6, p, section, article, span {
   margin: 0;
   padding: 0;
   font-weight: normal;
@@ -45,6 +45,7 @@ a.twitterlink:hover {
   top: 0;
   left: 0;
   display: block;
+  height: 65px;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -52,8 +53,8 @@ a.twitterlink:hover {
   border-width: 0 0 1px 0;
   border-style: solid;
   border-color: #cccccc;
-  margin-bottom: 2em; /*< required for the box-shadow */
   box-shadow: 0px 0px 8px rgba(0,0,0,0.2);
+  --webkit-box-shadow: 0px 0px 8px rgba(0,0,0,0.2);
 }
 
 .top-nav:after {
@@ -65,16 +66,13 @@ a.twitterlink:hover {
 
 .top-nav .logo {
   float: left;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+  margin-top: 2px;
 }
 
 .top-nav .title {
-  display: inline;
-  margin-top: 1.5em;
-  margin-left: 1.5em;
-  margin-bottom: 1.5em;
-  border: 1px solid #ccc;
+  float: left;
+  font-size: 24px;
+  padding: 18px 18px 19px 18px;
 }
 
 .top-nav ul, .top-nav li {
@@ -89,27 +87,27 @@ a.twitterlink:hover {
 
 .top-nav li {
   float: left;
-  margin-top: 1.5em;
-  margin-right: 1.5em;
-  margin-bottom: 1.5em;
+  margin-top: 23px;
+  margin-bottom: 23px;
 }
 
-.top-nav a {
-  text-decoration: none;
+.top-nav li a {
   color: #131313;
+  padding: 23px 12px;
+  text-decoration: none;
 }
 
-.top-nav a:hover {
+.top-nav li a:hover {
+  background: #f9f9f9;
   color: #337ab7;
 }
-
 
 /* header */
 
 /* ------------------------ */
 
 .header {
-  margin-top: 4.4em;
+  margin-top: 66px;
   padding-top: 5em;
   padding-bottom: 5em;
   text-align: center;
