--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,10 @@ h1, h2, h3, h4, h5, h6, p, section, article, span {
   font-weight: normal;
 }
 
+img {
+  border: none;
+}
+
 a {
   color: #337ab7;
   text-decoration: underline;
@@ -101,6 +105,10 @@ a.twitterlink:hover {
 .top-nav ul li a:hover {
   background: #f9f9f9;
   color: #337ab7;
+}
+
+.top-nav ul.menutoggle {
+  display: none;
 }
 
 /* header */
@@ -225,22 +233,30 @@ a.twitterlink:hover {
 
 /* ------------------------ */
 
-@media (max-width: 800px) {
+@media (max-width: 480px) {
 
   /* navigation */
 
-  /*.top-nav .menutoggler {
+  .top-nav ul.menutoggle {
     display: inline;
   }
 
-  .top-nav .links {
-    display: none;
+  .top-nav ul.menutoggle li a {
+    padding: 4px 12px 3px 12px;
   }
 
   .top-nav ul.links {
     clear: both;
-    display: block;
+    display: none;
     float: none;
+    position: absolute;
+    top: 67px;
+    right: 0px;
+    border-width: 0 1px 1px 0;
+    border-style: solid;
+    border-color: #cccccc;
+    box-shadow: 6px 6px 8px rgba(0,0,0,0.2);
+    --webkit-box-shadow: 0px  8px rgba(0,0,0,0.2);
   }
 
   .top-nav ul.links li {
@@ -248,8 +264,9 @@ a.twitterlink:hover {
   }
 
   .top-nav ul.links li a {
-    padding: 9px;
-  }*/
+    min-width: 200px;
+    padding: 12px 12px;
+  }
 
 }
 
